Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-6677

Error in Windows agent's Flags::runtime_dir CLI

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 1.2.0
    • 1.2.0
    • cli
    • Windows 10
      Commit b7937a68367088f3c1f7c334307422c71737b1d7

    Description

      Error occurs at runtime due to runtime_dir initialization code in the CLI.
      Code attempts to get the current user's name (which throws an error on Windows):

      F1202 14:43:16.214303 9816 flags.cpp:215] CHECK_SOME(user): The request is not supported.

      *** Check failure stack trace: ***

      While https://reviews.apache.org/r/53706/ implements os::user, the default is still incorrect for Windows as it switches on the Linux user "root", and would cause the hard-coded Linux default to be used in the edge case of a user named "root" on Windows.

      The fix is to use a proper Windows location for persistent data.

      Attachments

        Issue Links

          Activity

            People

              andschwa Andrew Schwartzmeyer
              andschwa Andrew Schwartzmeyer
              Alex Clemmer Alex Clemmer
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 24h
                  24h
                  Remaining:
                  Remaining Estimate - 24h
                  24h
                  Logged:
                  Time Spent - Not Specified
                  Not Specified